# scaffold

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Dependency/mongoose/: mongoose.c  mongoose.h
Example/: SConstruct  app.cpp
Foundation/: Logger.cpp  Request.cpp  Response.cpp  Router.cpp  Router.hpp  Scaffold.cpp  scaffold.cpp
Header/: Declaration.hpp  Logger.hpp  RapidJSON.hpp  Request.hpp  Response.hpp  Scaffold.hpp  scaffold.hpp
Header/Plugin/: MySQL.hpp  Session.hpp
Header/Plugin/MySQL/: MySQL.hpp  imstream.hpp  mstream.hpp  omstream.hpp
Plugin/: MySQL.cpp  Session.cpp
Plugin/MySQL/: imstream.cpp  omstream.cpp
Utility/: DateTimeHelper.cpp  FileSystem.cpp  HashAlgorithms.cpp  HttpStatusMapping.cpp  MimeTypeMapping.cpp  RequestConstructor.cpp  RequestConstructor.hpp  RequestHelper.cpp  RequestHelper.hpp  ResponseHelper.cpp  ResponseHelper.hpp  StringOperation.cpp  Utility.hpp
